Fix some issues with high contrast layout

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -5,6 +5,7 @@ $red: #b33834;
 $body-bg: #1f2326;
 $primary: #3fbf74;
 $bg-dark: #353b3f;
+$bg-darker: var(--bg-darker);
 $text-color: var(--text-color);
 $text-color-light: var(--text-color-light);
 $text-color-dark: var(--text-color-dark);
@@ -45,6 +46,7 @@ $gray-dark: #6a7277;
   --white: #dfdfdf;
   --text-color: #{ $gray };
   --text-color-dark: #{ $gray-dark };
+  --bg-darker: #{ darken($body-bg, 5%) };
   --font-size-base: 16px;
   --font-size-small: 14px;
   --font-stack: "Rubik", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
@@ -55,6 +57,7 @@ $gray-dark: #6a7277;
   --text-color: #{ lighten($gray, 15%) };
   --text-color-light: #{ lighten($gray, 10%) };
   --text-color-dark: #{ $gray };
+  --bg-darker: #{ darken($body-bg, 10%) };
   --font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 }
 
