--- a/app/assets/stylesheets/elements/_carousel.scss
+++ b/app/assets/stylesheets/elements/_carousel.scss
@@ -64,7 +64,7 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
-  background: darken($body-bg, 10%);
+  background: var(--bg-darker);
 
   &:hover,
   &:active {
