--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -505,7 +505,7 @@
 
   iframe {
     max-width: 100%;
-    background: darken($body-bg, 5%);
+    background: var(--bg-darker);
 
     &[src*="gfycat"] {
       height: clamp(0px, calc((80vw - #{ $margin }) / 16 * 9), map-get($media-min-widths, lg) / 16 * 9);
