--- a/app/assets/stylesheets/elements/_listings.scss
+++ b/app/assets/stylesheets/elements/_listings.scss
@@ -4,7 +4,7 @@
   padding: $margin / 4;
   margin-top: $margin / 2;
   border-radius: $border-radius * 2;
-  background: darken($body-bg, 5%);
+  background: var(--bg-darker);
   font-size: $font-size-small;
   max-height: 440px;
   overflow: auto;
