--- a/app/assets/stylesheets/elements/_well.scss
+++ b/app/assets/stylesheets/elements/_well.scss
@@ -17,7 +17,7 @@
   }
 
   &--dark {
-    background: darken($body-bg, 5%);
+    background: var(--bg-darker);
   }
 
   a {
